[Issue 13] Update file targets

--- a/Kurly.xcodeproj/xcshareddata/xcschemes/Kurly.xcscheme
+++ b/Kurly.xcodeproj/xcshareddata/xcschemes/Kurly.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B7E80C24297C02E2008A129D"
+               BuildableName = "KurlyTests.xctest"
+               BlueprintName = "KurlyTests"
+               ReferencedContainer = "container:Kurly.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
